<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bg_actionbar" >

        <ImageView
            android:id="@+id/button_back_btn"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:src="@drawable/nf" />

        <ImageView
            android:id="@+id/home_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/button_back_btn"
            android:src="@drawable/ic_action_home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/home_image"
            android:text="@string/button_sure_text"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/search_Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/meituan_login_button_selector"
            android:text="@string/meituan_find_password_txt"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/search_Txt"
            android:src="@drawable/widget_line" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/meituan_user_name_edt_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_name_text" />

        <EditText
            android:id="@+id/meituan_password_edt_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_password_text"
            android:inputType="textPassword" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/meituan_get_password_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="记住密码"
        android:onClick="onCheckBox"
        android:textColor="@color/blue_green" />

    <Button
        android:id="@+id/meituan_enter_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/meituan_login_button_selector"
        android:text="@string/button_sure_text"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/free_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:clickable="true"
            android:onClick="onRegisterActivity"
            android:text="@string/meituan_free_register_txt"
            android:textColor="@color/blue_green"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/fast_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:text="@string/meituan_fast_enter_txt"
            android:textColor="@color/blue_green"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/login_sliding_drawer_header"
            android:text="@string/meituan_cooperation_txt"
            android:textColor="@android:color/darker_gray"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>